public/styles/layout2.css
body{
  /* overflow: scroll; */
  width: 480px;
  margin: auto;
  text-align: center;
}

main{
  grid-template-columns: 1fr;
  grid-template-rows: 600px 75px 75px 75px 75px 75px;
  display: grid;
}

h1{
  display: none;
}

ul {
  grid-template-rows:2/3;
}

img{
  max-width: 300px;
  margin:auto;
}

ul > h2{
  font-weight: 900;
  padding: 10px;
}

button{
  margin: 10px;
  background-color:#003D57;
  border: none;
}

header{
  grid-row: 1/2;
  font-size: 3em;
  line-height: 1.5em;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

#randomMovie{
  grid-row: 3/4;
}

#keywordSearch{
  grid-row: 4/5;
}

#recommendations{
  grid-row: 5/6;
}

footer{
  grid-row: 6/7;
  font-size: 1.2em;
  line-height: 1em;
  margin: 10px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

@media only screen and (min-width:768px){

  img{
    max-height: 360px;
    float: left;
    padding: 20px;
  }

  ul{
    grid-column: 1/6;
    padding: 0px 15px 0px 15px;
    display: inline-block;
  }

  body{
    width: 100%;
    margin: auto;
  }
  main{
    grid-template-columns: 1fr 0.1fr 1fr 1fr 1fr;
    grid-auto-rows: max-content;
    grid-template-rows: 110px 110px 110px 110px 30px 30px 30px 30px;
    display: grid;
  }

  ul>p{
    padding-bottom: 10px;
  }

  h1{
    grid-row: 5/9;
    display: initial;
    grid-column: 1/2;
    font-size: 1.5em;
    line-height: 1.4em;
    text-align: center;
    background-color: #003D57;
  }

  button{
    background-color: #003D57;
    height: 30px;
    border: none;
    display: inline-block;
    border: none;
    margin: 0;
    text-decoration: none;
    color: #ffffff;
    font-size: 1rem;
    cursor: pointer;
    text-align: left;
    transition: background 250ms ease-in-out, 
                transform 150ms ease;
    -webkit-appearance: none;
    -moz-appearance: none;
  }
  
  #recommendations{
    grid-column: 3/6;
    grid-row: 5/6;
  }
  

  #randomMovie{
    grid-column: 3/6;
    grid-row: 6/7;
  }
  
  #keywordSearch{
    grid-column: 3/6;
    grid-row: 7/8;
  }
  
  #aboutUs{
    grid-column: 3/6;
    grid-row: 8/9;
  }
  
}

